# python_sql

./: .gitignore  docker-compose.yml  pyproject.toml
app/: .dockerignore  Dockerfile  main.py  requirements.txt
sql/: create_users_tables.sql  insert_user.sql
