[tool.poetry]
name = "python-sql"
version = "0.1.0"
description = "raw sql but with python"
authors = ["Robin Burri <robinburri@tutanota.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
